--- a/VRChat/02/1317202.html
+++ b/VRChat/02/1317202.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "a7Z0EXOD7Hp4Of9vtKk6uXl8K/D++GlGkG/03a8rH5s="></script>
+    "EHawzPQ3mpHwL9GYw+JU0VhYtDfqGdbLyYF6gcQ+ngs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ブロック、コイン、スター、どんぐり（スーパーマリオ）おまけつき","description":"追記\nおまけでノコノコをつけました。\n適当に使ってください。\n\n===================================\n\nスーパーマリオシリーズ\nブロック、コイン、スター、ドングリをセットにしています。\n\nVRChatやクリスタなどに使えると思います。\n\n\n○内容物\n・ブロック（使用済み）：566ポリゴン\n・ブロック（レンガ）　：892ポリゴン\n・コイン　　　　：316ポリゴン\n・スターコイン　：780ポリゴン\n・スター　　　　：465ポリゴン\n・どんぐり　　　：568ポリゴン\n\nテクスチャサイズは1024x1024px。\nfbxファイルのほかblendファイル(バージョン2.79版)も同梱してます。\n\n\nほかに公開しているマリオシリーズはこちら。\n\nパックンフラワー\nhttps://lyohm.booth.pm/items/1295052\n\nクリボー、キノコ、ハテナブロック\nhttps://lyohm.booth.pm/items/1307341\n\n\n--------------------\n\n【利用規約】\n下記の利用規約に同意した場合にのみ購入してください。\n\n可能なこと\n・VRChatやゲーム等への組み込み\n・xR、メタバース上での利用\n・そのほか動画や静止画への利用\n・モデルの改造\n\n禁止すること\n・当データをBOOTHや他のサイト、またはメディアで3Dデータとして販売すること。\n　（無償提供も含む）\n・NFTとしての販売\n・その他商用利用\n\n免責\n・このモデルを利用することで発生した問題について当方は一切の責任を負いません。\n","url":"https://booth.pm/ja/items/1317202","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/d641cff2-c5ca-40b4-9130-5e88a73e9182/i/1317202/0501cb49-9475-418c-912c-811e0419c447_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="a7Z0EXOD7Hp4Of9vtKk6uXl8K/D++GlGkG/03a8rH5s="></script>
+    nonce="EHawzPQ3mpHwL9GYw+JU0VhYtDfqGdbLyYF6gcQ+ngs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -558,9 +558,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
