--- a/VRChat/68/1316968.html
+++ b/VRChat/68/1316968.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "vcDLbKMU4o2w4Q/y6Grv02GvD7qfgNfWvnwTirf0diw="></script>
+    "LcHgXOQveoNxvF2BXPRk6LcJvXi4+TcYmga37eNa/60="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"バラの花 3Dモデル","description":"※初めてCGモデルを出品しているため不備などございましたらお手数ですが https://twitter.com/ochokonoflower までご連絡をお願いいたします。※\n\nバラの3Dモデルです。\n\n頂点数はおよそ20000です。\n\n〇形式\nfbx形式,、obj形式の2種類のファイルが入っています。\n（希望があれば別の形でも書き出せますのでお申し付けください）\n\n〇利用規約\n商用利用・再配布以外は可能です。\nご自由にお使いください。","url":"https://booth.pm/ja/items/1316968","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/444e0ab5-9196-439c-ad4a-029eaef5a4b2/i/1316968/831a7292-adf5-4d85-a9d1-d152d0f07165_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vcDLbKMU4o2w4Q/y6Grv02GvD7qfgNfWvnwTirf0diw="></script>
+    nonce="LcHgXOQveoNxvF2BXPRk6LcJvXi4+TcYmga37eNa/60="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -407,9 +407,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
