--- a/VRChat/27/1316927.html
+++ b/VRChat/27/1316927.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "wyAOJSzhxtYPj8DFOEFTie43pobDiv1SG4XROmsmugM="></script>
+    "XMRiUOWRvZoy/GvKgjxTuhvLTnNb1ILL+k8DAtwNi5A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『シャオフーリ(Xiaohuli)』V2.01","description":"キツネっぽいモフモフな男の子の3Dモデルです！\nAvatars 3.0対応\n\n◇利用規約◇\n\n対象コンテンツの利用権利の販売となります。コンテンツを改変および任意メディアで利用することができます。\n\nただし下記を禁止します。\n・他人が利用できるようにし、著作者の販売を阻害すること。\n・コンテンツ自体に政治的または宗教的もしくは反社会的なメッセージを持たせること。\n\nその他\n・コンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。\n・利用権利は他人に譲渡することができません。\n\nこのライセンスにおける解説情報は下記になります。\nhttps://gitlab.com/towelfunnelvrc/towel-license/wikis/\n（タオルライセンス 販売用 version0.9）\n\n\n◇unitypackage導入前に◇\n\n・VRCSDK3-AVATAR、DynamicBone(任意)をImportしたうえでImportすること\n\n\n◇内容物◇\n\n・Xiaohuli_V2.unitypackage\n┃\n┣・AvatarScene　――　DynamicBoneやVRChatアップロード用セットアップ済みモデルを配置したSceneファイル\n┃\n┣・Modelsフォルダ\n┃┃\n┃┣・Xiaohuli_V2.fbx　――　通常の3Dモデルファイル\n┃┃\n┃┗・Xiaohuli_V2_Parting.fbx　――　素体以外が別オブジェクトになっている3Dモデルファイル\n┃\n┣・Animationsフォルダ　――　Animation\n┃\n┣・Materialsフォルダ　――　Material\n┃\n┗・Texturesフォルダ　――　Texture\n\n・Body.psd　――　レイヤー分けしたテクスチャデータ\n\n\n◇更新履歴\n\n　2020/08/14 V2.01\n　　・Build 974対応のAnimator修正\n","url":"https://booth.pm/ja/items/1316927","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1316927/ea1275d4-72af-4529-88e0-fd81e2a014e9_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wyAOJSzhxtYPj8DFOEFTie43pobDiv1SG4XROmsmugM="></script>
+    nonce="XMRiUOWRvZoy/GvKgjxTuhvLTnNb1ILL+k8DAtwNi5A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -469,9 +469,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
