--- a/VRChat/80/1316780.html
+++ b/VRChat/80/1316780.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "xddkRDPixrKJmB2GUrFuA0KyoDljbsBS8EMBqDHCJKw="></script>
+    "8u5pWDtENjKgCiZtlqig37Hwgvyxu2qlBGEB0Q5BY7o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat想定アバター シルク=ファン=ハウテン","description":"ミルコの姉？兄？\nふわっとさらさら髪がチャームポイント\n\n耳はやっぱり４つあります\n定位置がしっかりします（は？\n\n大幅値引きしました～ヾ(๑╹◡╹)ﾉ\"\n\n■Ver01.01変更点：\n申し訳ありません。視点の高さのミスを修正しました\n異常になで肩になってしまうのが修正されます\n\n再セットアップが手間でしたら、\nコンポーネントVRC_Avatar Descriptorの\nView PositionのY値を0.74にすると新版同様になります","url":"https://booth.pm/ja/items/1316780","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"250","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/629c352e-e1a6-41ad-93c6-1a028df6b5cd/i/1316780/9674d8a6-401c-41d6-b5a0-9248685bbdd5_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xddkRDPixrKJmB2GUrFuA0KyoDljbsBS8EMBqDHCJKw="></script>
+    nonce="8u5pWDtENjKgCiZtlqig37Hwgvyxu2qlBGEB0Q5BY7o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -583,9 +583,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
