--- a/VRChat/32/1316832.html
+++ b/VRChat/32/1316832.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "vwjlMofKQzYHmiypqUJw3oG4Dw2ev35OAknPPFoHnqM="></script>
+    "44FHZXA51daEEHb3LAmO27I3kUX6h4zZuuSptdgp8wk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Glock17 pistol","description":"Glock17 first Item in my shop\n\n[Polygon]\n\nFaces - 3888\nTris  - 7620\n\n[Texture]\n\nBasement\nMetallic\nNormal\n\n2048x2048\n\n[File]\n\nGlock17.Unitypackage\n(6,740KB)\n\nMore_Texture\nBasement_\n         Black      (1,078KB)\n         TAN        (1,147KB)\n         Pink       (1,274KB)\n         Kry.Nomad  (1,485KB)\n         Kry.Pontus (1,651KB)\n\nKryptek Camo's Copyright is at Kryptek Outdoor Group, LLC\n\n[Email]\n\nphecrys@gmail.com \n\n\n--------------------------\n\nThx for watching my model\n\nI'm Korean Student in Highschool\nim not well japanese but i really want\nbuy vr machine and i found this site","url":"https://booth.pm/ja/items/1316832","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/4a1c1edc-9b81-4a0c-9a1f-0a5af94b8e1a/i/1316832/14e20f42-12a1-4ce0-b42f-b35c03718cd1_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vwjlMofKQzYHmiypqUJw3oG4Dw2ev35OAknPPFoHnqM="></script>
+    nonce="44FHZXA51daEEHb3LAmO27I3kUX6h4zZuuSptdgp8wk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -532,9 +532,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
