--- a/VRChat/19/1382919.html
+++ b/VRChat/19/1382919.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "rcHrnoagNCn3cp8QNN0C0h1DsSgwDIx1bIgivOQ9Eaw="></script>
+    "SCLNee9LTj9NLcHJS8AKVeO8qI9CfbYn6hY9bBMmUIU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"キッシュちゃん用色替え瞳セット","description":"Twitterで頒布していたキッシュちゃん(https://mutachannel.booth.pm/items/954376)用の瞳テクスチャ素材です。(https://twitter.com/tenteeeee_vrc/status/1086219098818633729)\n\nキッシュちゃん用に作ってはいますが、多分ちょっと変形すれば他のアバターでも使えると思います。\n\nCLIP STUDIO PAINTにて作成し、Photoshopドキュメントへの変換ファイルも付属していますが、Photoshopでうまく開けないとの報告もあります。CLIP STUDIO PAINTがない方はPSDが開けるフリーソフトなどでも一度ご確認ください。","url":"https://booth.pm/ja/items/1382919","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/d6025b1a-065f-421b-b27c-b58fab3f570e/i/1382919/0a85f345-801f-46b2-acb1-2e9ff0bbc096_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rcHrnoagNCn3cp8QNN0C0h1DsSgwDIx1bIgivOQ9Eaw="></script>
+    nonce="SCLNee9LTj9NLcHJS8AKVeO8qI9CfbYn6hY9bBMmUIU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -396,9 +396,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
