--- a/VRChat/80/1382580.html
+++ b/VRChat/80/1382580.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "F5Sywu3Rl8DTSke+Xkj2qvsXkDEXmKguH4kA3QJr270="></script>
+    "48vFUirUbjP6r+zGLbo65beprPOqZPNcDkYDieEOYQk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Clione","description":"-特徴-\nデフォルメしたクリオネのモデルデス\n核の部分と表皮でマテリアルは分けていますデス\n片面ポリゴンで透過使用のため透過して両面表示出来るシェーダー推奨デス\nVRCSDK3-PhysicsBoneに対応しましたデス\nシェイプキーopenで開口　eatでバッカルコーンしますデス\nPhysicsBone版にPhysicsBoneとConstraintsのみを使ったアバターに遅れて追従する仕組みを使用したプレハブがあります\n製作時Unityバージョン　2019.4.31f1\n\nDynamicBone版に『Drone Movement with Dynamic Bone 0.2.0』のDynamicBoneとConstraintsのみを使ったアバターに遅れて追従する仕組みを使用したプレハブがあります\nポリゴン数　△２３０８\n製作時Unityバージョン　2018.4.20f1\n\n-更新履歴-\n2020年12月19日\n　メッシュの大きさを修正\n　大きさ変更に伴いアニメーションデータの修正\n　Unlit_Transparent_CullOffシェーダーを追加\n　データ内の日本語文字を英語文字に修正\n　Unityパッケージ内のフォルダを管理しやすいように変更\n\n-内容物-\n・Clione.fbx\n・Clione.unitypackage\n・Clione_UV.png\n・説明書.txt\n・更新履歴.txt\n・DroneMovementWithDB_LICENSE（DynamicBone版のみ）\n\n-ライセンス-\nDynamicBone版のDroneClioneプレハブで使っているドローン機構は『x.maho laboratory』の「フォルノ」さんが公開されている\n『Drone Movement with Dynamic Bone 0.2.0』の一部を使用しています\nhttps://forno.booth.pm/items/2026750\nライセンスはMITライセンスで公開されています\n本許諾表示はDroneMovementWithDB_LICENSEファイル内のLICENSE.mdをご覧ください\n\n\n-利用規約-\n当モデルは、憂人本家が作成した3Dオブジェクトデス\n当モデルデータの利用者はモデルデータの利用をもって本利用規約に同意したものとみなしますデス\n\nVRChatやUnity製作物やMMD等での利用が可能デス\n改変や商用利用が可能デス\n\n再販や悪意のある利用はしないで下さいデス\n\n利用規約はダウンロード時点での情報ではなく最新の情報が優先されますデス\n当モデルで生じたいかなる損害やトラブルに対して憂人本家は一切責任を負いませんデス\n日本国の著作権法に保護された著作物であることをご留意くださいデス","url":"https://booth.pm/ja/items/1382580","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"100","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/b38e460c-5ac5-4c59-aaae-e30f1fceea3a/i/1382580/3c9410be-9c1b-45e3-8833-2fb854afd4b2_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="F5Sywu3Rl8DTSke+Xkj2qvsXkDEXmKguH4kA3QJr270="></script>
+    nonce="48vFUirUbjP6r+zGLbo65beprPOqZPNcDkYDieEOYQk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -550,9 +550,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
