--- a/VRChat/78/1381878.html
+++ b/VRChat/78/1381878.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "vvAyBUrPFTdspj/t9gy/P3UtK8NujwS0c6ner2fI3HI="></script>
+    "Gnketp1bfchlcJHZsLB9mdR1QGWRq4XiO4h5sWtAOQI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おきゅぺん アートTシャツ（白）","description":"とある配信で描いたアートから生まれたTシャツ。VRのすきまに暮らすペンギン、おきゅぺんです。リアルグッズだけど……ええっと、いいの…？\n\nhttps://youtu.be/NqgJrY08Bx0?t=2658\n\nかわいいって言ってくれるひとがいたので、まさかの公式グッズ化＞＜　VRChatで描いた配信をキャプチャしたものが元なので解像度低めです。\n\n※この商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。","url":"https://booth.pm/ja/items/1381878","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1950","highPrice":"1950"},"image":"https://booth.pximg.net/c/620x620/00e145f9-56bb-4d61-a781-aec554e36161/i/1381878/3bbbd7d7-cef5-4054-b832-e09246e03221_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vvAyBUrPFTdspj/t9gy/P3UtK8NujwS0c6ner2fI3HI="></script>
+    nonce="Gnketp1bfchlcJHZsLB9mdR1QGWRq4XiO4h5sWtAOQI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -667,9 +667,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
