--- a/VRChat/74/1381874.html
+++ b/VRChat/74/1381874.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "3EAOOkb8DHmYJBnb1PdUSKl3prDxlotjB8FrdixXiaY="></script>
+    "9703Z7M1VV+YMVA59PjSlIJ92Y4kC1j2+0mqDgyDOSU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VR用3Dモデル「2A-7/LC　(ニアナ/ライトカスタム)」","description":"■■オキュラスクエストを想定した2A-7の軽量化版です■■\n\n―――――――――――――――――――――――――――\n\n3Dのキャラ素材としてご使用ください。\nワールドで使ったり、シェーダーで使ったりして、それを再配布しても問題ありません。\n\n\nこちらは　クリエイティブ・コモンズ・ライセンス　の　「CC BY 4.0」です。\n(簡単に言うと原作者のクレジット記載さえあれば、何をしてもOK)\nワールド作成の賑やかし、ペデスタル、メッシュの改造して再配布などVR創作活動にご利用しても問題ありません。\n\n「CC BY 4.0」の詳細はこちらのサイト参照\nhttps://creativecommons.org/licenses/by/4.0/deed.ja\n\n―――――――――――――――――――――――――――\n\n◇内容物\n・unitypakage\n・改造用の全メッシュの入ったFBX\n・改造用テクスチャ\n\n―――――――――――――――――――――――――――\n\nツイッターで「#ニアナ」で呟いてくれると嬉しいです。\nあと機能など更新事項など自分がそれでアナウンスするかもしれません。\n\n―――――――――――――――――――――――――――\n\n大きな不具合がない限り対応は難しいですが、\n導入など分からない点がありましたらお気軽に質問してください。\n(自分の分かる範囲になります)\n\n連絡先は、\n　ツイッター(gaku2_sigehiro)\n　メール(sigehiro_summer@hotmail.com)\nになります。\n\n―――――――――――――――――――――――――――\n\n本モデルで発生した問題は基本的に受け付けておりませんが、連絡いただければ大体なんか実装していますのでお気軽にどうぞ。\n致命的なバグなどがありましたら修正致します。","url":"https://booth.pm/ja/items/1381874","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/c4e47d12-5c33-4226-982f-4671e408c771/i/1381874/6f6bcf83-627b-4606-b4ab-bc15b7069484_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3EAOOkb8DHmYJBnb1PdUSKl3prDxlotjB8FrdixXiaY="></script>
+    nonce="9703Z7M1VV+YMVA59PjSlIJ92Y4kC1j2+0mqDgyDOSU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -430,9 +430,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
