--- a/VRChat/64/1381764.html
+++ b/VRChat/64/1381764.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "5RWAxXHtRfq9EcnEjuuNh+Wu4K1ITxq6j47pjaWolsk="></script>
+    "jZQrgPL1mzC7pOfkgxjoIW+l+4IBALvhg7f+O9k7IgM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ましろたん V1.0","description":"【解説】\n\nましろたんです。\n\n\n【利用規約】\n\n当モデルに同梱されているデータの改変は自由ですし、営利、非営利を問わず動画配信、部屋の飾り、フィギュア化等に利用できます。\n\n当モデルを使用したことによる何らかのトラブル、人間関係の崩壊やチャンネル登録者数の減少等についての責任は負えません。\n\nまた、当モデルを何らかの形で使用した時点で上記規約、及び下記禁止事項に同意したとみなします。\n\n\n【禁止事項】\n\n1:極端な公序良俗に反する目的、攻撃的な政治・宗教的利用、他者を侮辱する目的での使用。\n\n2:改変・非改変を問わない再配布。\n\n\n【内容物】\n・20190515__000.fbx\n　３Dデータそのものです。\n\n・20190515__000.png\n　テクスチャの画像です。\n\n・20190515__000.psd\n　パーツ事にレイヤ分けしたテクスチャです。\n\n・MASHIRO.unitypackage\n　Unityでインポートできるパッケージです。\n\n\n【追加推奨アセット】\n\n[DYNAMIC BONE]\n[Arktoon-Shaders]\n\n","url":"https://booth.pm/ja/items/1381764","offers":{"priceCurrency":"JPY","@type":"Offer","price":"10000"},"image":"https://booth.pximg.net/c/620x620/54ec1551-b2cd-4a33-a855-3bdfaadf605b/i/1381764/a0270dbc-791f-4590-a432-46c05c7fcfe2_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5RWAxXHtRfq9EcnEjuuNh+Wu4K1ITxq6j47pjaWolsk="></script>
+    nonce="jZQrgPL1mzC7pOfkgxjoIW+l+4IBALvhg7f+O9k7IgM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -449,9 +449,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
